--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <h2>How You Can Get the Best Sound From Any Speakers</h2>
+          <p>A user friendly guide to optimizng speaker setup and placement.</p>
+          <a href="https://medium.com/@wnorman246/how-you-can-get-the-best-sound-from-any-speakers-c8fac5473d6b" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
