--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <h2>Double King</h2>
+          <p>A Favorite Video of mine.</p>
+          <a href="https://www.youtube.com/watch?v=w_MSFkZHNi4" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
+          <h2>Podcast Commentary on Virginia Fowler</h2>
           <p>Add a short but appealing description of your podcast</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <a href="https://soundcloud.com/kjack24/podcast-commentary-on-virginia-fowler" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
@@ -59,7 +59,8 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://linkedin.com/in/will-norman1829" class="external-link" target="_blank">Linkedin
+      </a>
     </div>
 
   </div>
